Se cambia visualmente el buscar por id

--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -305,21 +305,25 @@
                                 </p:menuitem>
 
                                 <f:facet name="options">
-
-                                    <h:panelGrid columns="3">
-                                        <p:ajaxStatus style="margin-right:25px">
-                                            <f:facet name="start">
-                                                <p:graphicImage library="images" name="ajax-loader_red.gif" />
-                                            </f:facet>
-                                        </p:ajaxStatus>
-                                        <p:inputText id="idCaso" value="#{casoController.idCaso}" title="#{bundle.EditCasoTitle_idCaso}"
-                                                     placeholder="id caso" style="margin-right:10px" size="10"/>
-                                        <p:commandButton ajax="false" action="#{casoController.prepareEditCaso}" icon="ui-icon ui-icon-search">
-                                            <p:resetInput target="@form" />
-                                        </p:commandButton>
-                                    </h:panelGrid>
-
+                                    <p:ajaxStatus style="position: absolute; top: 10px; right: 110px;">
+                                        <f:facet name="start">
+                                            <p:graphicImage library="images" name="ajax-loader_red.gif" />
+                                        </f:facet>
+                                    </p:ajaxStatus>
+                                    <div align="right" >
+                                        <p:outputPanel style="position: absolute; top: 8px; right: 10px;">  
+                                            <p:inputText id="idCaso" value="#{casoController.idCaso}"
+                                                         style="width:70px;height:12px; border-radius: 4em; text-align: left; padding-left: 10px;" />  
+                                            <p:watermark for="idCaso" value="id caso" id="watermark"/>
+                                            <p:commandButton value="" icon="fa fa-search" ajax="false"
+                                                             style="position: inherit; background: none; border: 0px !important;top: 6px; right: -4px;"
+                                                             action="#{casoController.prepareEditCaso}">
+                                                <p:resetInput target="@form" />
+                                            </p:commandButton>
+                                        </p:outputPanel>
+                                    </div>
                                 </f:facet>
+
 
                             </p:menubar>
 
